21 - Add configuration and evaluation to Architectural Design
