# ArchitectureRefactoringHelper/Repository/swagger.json
@@ -1566,6 +1566,58 @@
         }
       }
     },
+    "/api/v1/architectural-designs/recommendations": {
+      "post": {
+        "tags": [
+          "ArchitecturalDesign"
+        ],
+        "operationId": "RecommendArchitecturalDesigns",
+        "parameters": [
+          {
+            "name": "count",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ArchitecturalDesignRecommendationRequest"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ArchitecturalDesignRecommendationRequest"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/ArchitecturalDesignRecommendationRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ArchitecturalDesign"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/approaches": {
       "get": {
         "tags": [
@@ -3550,6 +3602,28 @@
           },
           "approachProcess": {
             "$ref": "#/components/schemas/ApproachProcess"
+          }
+        },
+        "additionalProperties": false
+      },
+      "ArchitecturalDesignRecommendationRequest": {
+        "required": [
+          "qualityInformation",
+          "qualitySublevelInformation"
+        ],
+        "type": "object",
+        "properties": {
+          "qualityInformation": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/QualityAttributeRecommendationInformation"
+            }
+          },
+          "qualitySublevelInformation": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/QualitySublevelAttributeRecommendationInformation"
+            }
           }
         },
         "additionalProperties": false
